[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/Agent.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/RandomForce.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Attractor.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/Env.gd" type="Script" id=5]
[ext_resource path="res://scripts/Settings.gd" type="Script" id=6]
[ext_resource path="res://scripts/RGBCameraSensor3D.gd" type="Script" id=7]
[ext_resource path="res://custom_env.tres" type="Environment" id=8]

[sub_resource type="SpatialMaterial" id=8]

[sub_resource type="PhysicsMaterial" id=5]
friction = 0.0
bounce = 1.0
absorbent = true

[sub_resource type="BoxShape" id=2]
extents = Vector3( 4.41094, 5.94369, 0.542088 )

[sub_resource type="PhysicsMaterial" id=4]
friction = 0.0

[sub_resource type="BoxShape" id=1]
extents = Vector3( 3.00746, 6.09293, 0.814509 )

[sub_resource type="SpatialMaterial" id=7]
emission_enabled = true
emission = Color( 0.701961, 0.631373, 0.533333, 1 )
emission_energy = 0.39
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="PhysicsMaterial" id=3]
friction = 0.5
bounce = 1.0

[node name="Env" type="Spatial"]
script = ExtResource( 5 )

[node name="Floor" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.207257, -5 )

[node name="CSGBox" type="CSGBox" parent="Floor"]
width = 8.77922
height = 11.9059
depth = 0.065
material = SubResource( 8 )

[node name="StaticBody" type="StaticBody" parent="Floor"]
physics_material_override = SubResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="Floor/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00825336, -0.476379 )
shape = SubResource( 2 )

[node name="Agent" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.90733, 3.34033, -0.453864 )

[node name="Walls" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5 )

[node name="StaticBody" type="StaticBody" parent="Walls"]
physics_material_override = SubResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/StaticBody"]
transform = Transform( -3.30012e-15, -4.37114e-08, 1, -1, 7.54979e-08, -1.82969e-22, -7.54979e-08, -1, -4.37114e-08, -4.94282, 2.13794, 0.070803 )
shape = SubResource( 1 )

[node name="CollisionShape2" type="CollisionShape" parent="Walls/StaticBody"]
transform = Transform( -3.30012e-15, -4.37114e-08, 1, -1, 7.54979e-08, -1.82969e-22, -7.54979e-08, -1, -4.37114e-08, 4.87065, 2.13794, 0.0740305 )
shape = SubResource( 1 )

[node name="CollisionShape3" type="CollisionShape" parent="Walls/StaticBody"]
transform = Transform( -7.54979e-08, -1, -1.50996e-07, -1, 7.54979e-08, -3.26133e-22, 1.13999e-14, 1.50996e-07, -1, 0.145801, 2.13794, -6.42148 )
shape = SubResource( 1 )

[node name="CollisionShape4" type="CollisionShape" parent="Walls/StaticBody"]
transform = Transform( -7.54979e-08, -1, -1.50996e-07, -1, 7.54979e-08, -3.26133e-22, 1.13999e-14, 1.50996e-07, -1, 0.145801, 2.13794, 6.52569 )
shape = SubResource( 1 )

[node name="CSGBox" type="CSGBox" parent="Walls/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.30003, 0, 0 )
width = 0.268751
depth = 11.9147
material = SubResource( 7 )

[node name="CSGBox2" type="CSGBox" parent="Walls/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.25523, 0, 0 )
width = 0.268751
depth = 11.9147
material = SubResource( 7 )

[node name="CSGBox3" type="CSGBox" parent="Walls/StaticBody"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.0223989, 0, -5.81834 )
width = 0.268751
depth = 8.3667
material = SubResource( 7 )

[node name="CSGBox4" type="CSGBox" parent="Walls/StaticBody"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.022397, 0, 5.82555 )
width = 0.268751
depth = 8.77922
material = SubResource( 7 )

[node name="Ball" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.779, 0 )
mass = 1.0
physics_material_override = SubResource( 3 )

[node name="RandomForces" type="Node" parent="."]

[node name="ForceArea1" parent="RandomForces" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.18174, 0.756149, -8.78569 )
strength = 5

[node name="ForceArea2" parent="RandomForces" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.44137, 0.778606, -2.61198 )
strength = 5

[node name="ForceArea3" parent="RandomForces" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000598669, 0.756149, -3.65985 )
strength = 5

[node name="ForceArea4" parent="RandomForces" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.52112, 0.778606, -7.83626 )
strength = 5

[node name="Attractors" type="Node" parent="."]

[node name="Attractor" parent="Attractors" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0989819, 0.763111, -7.18637 )
strength = 0.5
frequency = 100.0

[node name="GUI" type="Control" parent="."]
pause_mode = 2
margin_right = 1027.0
margin_bottom = 603.0
mouse_filter = 2

[node name="Settings" type="AcceptDialog" parent="GUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -384.0
margin_top = -64.0001
margin_right = 384.0
margin_bottom = 64.0001
size_flags_horizontal = 0
size_flags_vertical = 0
window_title = "Set data path"
script = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/Settings"]
anchor_right = 0.999
anchor_bottom = 0.703
margin_left = 8.0
margin_top = 8.0
margin_right = -7.23199
margin_bottom = 2.01605

[node name="Label" type="Label" parent="GUI/Settings/VBoxContainer"]
margin_right = 752.0
margin_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Select or input data path"
valign = 1

[node name="PathContainer" type="HBoxContainer" parent="GUI/Settings/VBoxContainer"]
margin_top = 58.0
margin_right = 752.0
margin_bottom = 84.0
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Browse" type="Button" parent="GUI/Settings/VBoxContainer/PathContainer"]
margin_right = 59.0
margin_bottom = 26.0
text = "Browse"

[node name="DataPath" type="LineEdit" parent="GUI/Settings/VBoxContainer/PathContainer"]
margin_left = 63.0
margin_right = 752.0
margin_bottom = 26.0
size_flags_horizontal = 3
clear_button_enabled = true

[node name="FileDialog" type="FileDialog" parent="GUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -209.5
margin_top = -140.0
margin_right = 209.5
margin_bottom = 140.0
window_title = "Open a File"
mode = 0
access = 2

[node name="UserCamera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.0542165, 4.21644, -4.82567 )
environment = ExtResource( 8 )
projection = 1
fov = 74.4375
size = 13.0544

[node name="RGBCameraSensor3D" type="Spatial" parent="."]
script = ExtResource( 7 )

[node name="Viewport" type="Viewport" parent="RGBCameraSensor3D"]
size = Vector2( 36, 50 )
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="RGBCameraSensor3D/Viewport"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 5.192, -4.937 )
cull_mask = 1048573
environment = ExtResource( 8 )
projection = 1
size = 12.0
near = 0.5

[connection signal="about_to_show" from="GUI/Settings" to="GUI/Settings" method="_on_Settings_about_to_show"]
[connection signal="confirmed" from="GUI/Settings" to="." method="_on_Settings_confirmed"]
[connection signal="confirmed" from="GUI/Settings" to="GUI/Settings" method="_on_Settings_confirmed"]
[connection signal="popup_hide" from="GUI/Settings" to="GUI/Settings" method="_on_Settings_popup_hide"]
[connection signal="pressed" from="GUI/Settings/VBoxContainer/PathContainer/Browse" to="." method="_on_Browse_pressed"]
[connection signal="dir_selected" from="GUI/FileDialog" to="GUI/Settings" method="_on_FileDialog_dir_selected"]
